# python-boilerplate

./: .gitignore  .pre-commit-config.yaml  Pipfile  pyproject.toml
tests/: README.md
