[project]
name = "Boilerplate"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [

]

[project.optional-dependencies]
dev = [

]

[tool.black]
line-length = 120

[tool.ruff]
select = ["ALL"]
ignore = ["E501", "D211", "D213"]

[tool.coverage.paths]
source = ["app"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
